[package]
name = "messagebird-async"
version = "0.0.0"
authors = ["Bernhard Schuster <bernhard@ahoi.io>"]
license = "MIT OR Apache-2.0"
description = "Wrapper around the message bird API"
repository = "https://github.com/drahnr/messagebird-async"
keywords = ["messagebird", "sms"]
categories = ["asynchronous", "api-bindings"]

[dependencies]
hyper = "0.11"
