[package]
name = "messagebird-async"
version = "0.0.3"
authors = ["Bernhard Schuster <bernhard@ahoi.io>"]
license = "MIT OR Apache-2.0"
description = "Wrapper around the message bird SMS API"
repository = "https://github.com/drahnr/messagebird-async"
keywords = ["messagebird", "sms"]
categories = ["asynchronous", "api-bindings"]
readme = "README.md"

[dependencies]
hyper = "^0.12.9"
hyper-rustls = "^0.14.0"
chrono = "0.4"
url = "^1.7.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_plain = "0.3"
failure = "0.1.2"
failure_derive = "0.1.2"
common_failures = "0.1.1"
lazy_static = "1.0"
regex = "1.0"
futures = "0.1"
log = "0.4"
num = "0.2"

[dev-dependencies]
tokio-core = "0.1.7"