[package]
name = "messagebird-async"
version = "0.2.2"
authors = ["Bernhard Schuster <bernhard@ahoi.io>"]
license = "MIT OR Apache-2.0"
description = "Wrapper around the message bird SMS API"
repository = "https://github.com/drahnr/messagebird-async"
keywords = ["messagebird", "sms"]
categories = ["asynchronous", "api-bindings"]
readme = "README.md"

[badges]
#codecov = { repository = "drahnr/messagebird-async", branch = "master", service = "github" }
maintenance = { status = "actively-developed" }

[dependencies]
hyper = "0.12"
hyper-rustls = "0.14"
chrono = "0.4"
url = "1.7"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_plain = "0.3"
serde_url_params = "0.1"
failure = "0.1.3"
failure_derive = "0.1.3"
common_failures = "0.1.1"
lazy_static = "1.2"
regex = "1.0"
futures = "0.1"
log = "0.4"
num = "0.2"
num-traits = "0.2"
enum-primitive-derive = "0.1"

[dev-dependencies]
tokio-core = "0.1"
env_logger = "0.6"